--- a/index.html
+++ b/index.html
@@ -1,179 +1,242 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portofolio Saya</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Portfolio Modern</title>
 
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: Arial, sans-serif;
-        }
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
-        body {
-            background: #f4f4f4;
-            color: #333;
-            line-height: 1.6;
-        }
+<style>
+*{
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
+  font-family: 'Poppins', sans-serif;
+  scroll-behavior:smooth;
+}
 
-        header {
-            background: #222;
-            color: #fff;
-            padding: 20px 0;
-            text-align: center;
-        }
+body{
+  background: linear-gradient(135deg,#0f2027,#203a43,#2c5364);
+  color:white;
+}
 
-        header h1 {
-            margin-bottom: 10px;
-        }
+nav{
+  position:fixed;
+  width:100%;
+  top:0;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  padding:20px 10%;
+  backdrop-filter:blur(10px);
+  background:rgba(0,0,0,0.3);
+  z-index:1000;
+}
 
-        nav {
-            margin-top: 10px;
-        }
+nav h2{
+  background: linear-gradient(45deg,#00f5a0,#00d9f5);
+  -webkit-background-clip:text;
+  color:transparent;
+}
 
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            margin: 0 15px;
-            font-weight: bold;
-        }
+nav ul{
+  display:flex;
+  list-style:none;
+}
 
-        nav a:hover {
-            color: #00adb5;
-        }
+nav ul li{
+  margin-left:30px;
+}
 
-        section {
-            padding: 60px 20px;
-            max-width: 1000px;
-            margin: auto;
-        }
+nav ul li a{
+  text-decoration:none;
+  color:white;
+  transition:0.3s;
+}
 
-        #about {
-            text-align: center;
-        }
+nav ul li a:hover{
+  color:#00f5a0;
+}
 
-        #about img {
-            width: 150px;
-            border-radius: 50%;
-            margin-bottom: 20px;
-        }
+.hero{
+  height:100vh;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  flex-direction:column;
+  text-align:center;
+  padding:0 20px;
+  animation: fadeIn 1.5s ease;
+}
 
-        .projects {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-        }
+.hero h1{
+  font-size:50px;
+}
 
-        .card {
-            background: #fff;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 5px 10px rgba(0,0,0,0.1);
-            transition: 0.3s;
-        }
+.hero span{
+  background: linear-gradient(45deg,#00f5a0,#00d9f5);
+  -webkit-background-clip:text;
+  color:transparent;
+}
 
-        .card:hover {
-            transform: translateY(-5px);
-        }
+.hero p{
+  margin-top:15px;
+  opacity:0.8;
+}
 
-        .card h3 {
-            margin-bottom: 10px;
-        }
+.btn{
+  margin-top:25px;
+  padding:12px 25px;
+  border-radius:30px;
+  border:none;
+  background:linear-gradient(45deg,#00f5a0,#00d9f5);
+  color:black;
+  font-weight:bold;
+  cursor:pointer;
+  transition:0.3s;
+}
 
-        .card p {
-            font-size: 14px;
-            margin-bottom: 10px;
-        }
+.btn:hover{
+  transform:scale(1.1);
+}
 
-        .card a {
-            text-decoration: none;
-            color: #00adb5;
-            font-weight: bold;
-        }
+section{
+  padding:120px 10% 100px;
+}
 
-        #contact {
-            text-align: center;
-        }
+.section-title{
+  text-align:center;
+  margin-bottom:50px;
+  font-size:32px;
+}
 
-        footer {
-            background: #222;
-            color: #fff;
-            text-align: center;
-            padding: 15px;
-            margin-top: 40px;
-        }
+.about{
+  background:rgba(255,255,255,0.05);
+  backdrop-filter:blur(10px);
+  border-radius:15px;
+  padding:40px;
+  text-align:center;
+  animation: fadeIn 1.5s ease;
+}
 
-        .btn {
-            display: inline-block;
-            padding: 10px 20px;
-            background: #00adb5;
-            color: #fff;
-            border-radius: 5px;
-            text-decoration: none;
-            margin-top: 10px;
-        }
+.projects-container{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+  gap:30px;
+}
 
-        .btn:hover {
-            background: #007b80;
-        }
-    </style>
+.card{
+  background:rgba(255,255,255,0.05);
+  backdrop-filter:blur(10px);
+  padding:30px;
+  border-radius:15px;
+  transition:0.4s;
+}
+
+.card:hover{
+  transform:translateY(-10px);
+  background:rgba(0,245,160,0.15);
+}
+
+.contact{
+  text-align:center;
+}
+
+.social-links a{
+  display:inline-block;
+  margin:10px;
+  color:#00f5a0;
+  text-decoration:none;
+  font-weight:600;
+}
+
+footer{
+  text-align:center;
+  padding:20px;
+  background:rgba(0,0,0,0.4);
+  margin-top:50px;
+}
+
+@keyframes fadeIn{
+  from{
+    opacity:0;
+    transform:translateY(30px);
+  }
+  to{
+    opacity:1;
+    transform:translateY(0);
+  }
+}
+
+@media(max-width:768px){
+  .hero h1{
+    font-size:32px;
+  }
+}
+</style>
 </head>
 <body>
 
-<header>
-    <h1>Nama Kamu</h1>
-    <p>Web Developer | Designer | Freelancer</p>
-    <nav>
-        <a href="#about">Tentang</a>
-        <a href="#projects">Project</a>
-        <a href="#contact">Kontak</a>
-    </nav>
-</header>
+<nav>
+  <h2>MyPortfolio</h2>
+  <ul>
+    <li><a href="#home">Home</a></li>
+    <li><a href="#about">Tentang</a></li>
+    <li><a href="#projects">Project</a></li>
+    <li><a href="#contact">Kontak</a></li>
+  </ul>
+</nav>
+
+<section class="hero" id="home">
+  <h1>Halo, Saya <span>Zulva</span></h1>
+  <p>Frontend Developer | UI Designer | Freelancer</p>
+  <button class="btn" onclick="document.getElementById('projects').scrollIntoView()">Lihat Project</button>
+</section>
 
 <section id="about">
-    <img src="https://via.placeholder.com/150" alt="Foto Profil">
-    <h2>Tentang Saya</h2>
+  <h2 class="section-title">Tentang Saya</h2>
+  <div class="about">
     <p>
-        Halo! Saya adalah seorang web developer yang fokus pada pembuatan website modern dan responsif.
-        Saya memiliki pengalaman dalam HTML, CSS, dan JavaScript.
+      Saya adalah web developer yang fokus membuat website modern,
+      responsif, dan menarik secara visual. 
+      Berpengalaman dalam HTML, CSS, dan JavaScript.
     </p>
+  </div>
 </section>
 
 <section id="projects">
-    <h2 style="text-align:center; margin-bottom:30px;">Project Saya</h2>
-    <div class="projects">
-        <div class="card">
-            <h3>Website Company Profile</h3>
-            <p>Website bisnis modern dan responsif.</p>
-            <a href="#">Lihat Project</a>
-        </div>
-
-        <div class="card">
-            <h3>Landing Page Produk</h3>
-            <p>Landing page untuk meningkatkan konversi penjualan.</p>
-            <a href="#">Lihat Project</a>
-        </div>
-
-        <div class="card">
-            <h3>Aplikasi To-Do List</h3>
-            <p>Aplikasi sederhana menggunakan JavaScript.</p>
-            <a href="#">Lihat Project</a>
-        </div>
+  <h2 class="section-title">Project Saya</h2>
+  <div class="projects-container">
+    <div class="card">
+      <h3>Company Profile</h3>
+      <p>Website profesional untuk branding perusahaan.</p>
     </div>
+    <div class="card">
+      <h3>Website Toko Online</h3>
+      <p>E-commerce sederhana dengan desain modern.</p>
+    </div>
+    <div class="card">
+      <h3>Landing Page Produk</h3>
+      <p>Landing page yang fokus meningkatkan konversi.</p>
+    </div>
+  </div>
 </section>
 
 <section id="contact">
-    <h2>Kontak Saya</h2>
+  <h2 class="section-title">Kontak</h2>
+  <div class="contact">
     <p>Email: emailkamu@email.com</p>
-    <p>WhatsApp: 08xxxxxxxxxx</p>
-    <a href="mailto:emailkamu@email.com" class="btn">Kirim Email</a>
+    <div class="social-links">
+      <a href="#">GitHub</a>
+      <a href="#">LinkedIn</a>
+      <a href="#">Instagram</a>
+    </div>
+  </div>
 </section>
 
 <footer>
-    <p>© 2026 Nama Kamu. All Rights Reserved.</p>
+  © 2026 Zulva | All Rights Reserved
 </footer>
 
 </body>
